# Changelog

## Unreleased

## v0.2.8

* Upgrade dependency on KingKonf.

## v0.2.7

* Support for ssl_ca_certs_from_system #18
* Interface synchronisation in test #24
* Fixed error for require in railtie.rb #23

## v0.2.4

* Add support for SASL SCRAM

## v0.2.0

* Add a test mode
* Improve config system